--- a/src/components/TodosList.css
+++ b/src/components/TodosList.css
@@ -4,3 +4,10 @@ TodosList Css | TodosToaster Lab
 */
 
 
+ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
