--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -13,3 +13,12 @@ p#instructions {
   margin: 12px;
   font-size: 1em;
 }
+
+input {
+  width: 260px;
+  margin-bottom: 36px;
+  padding: 2px 6px;
+  border-radius: 7px;
+  
+  font-size: 0.85em;
+}
