--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -11,6 +11,9 @@ li {
   justify-content: center;
   align-items: flex-start;
 
+  margin: 3px 6px;
+  border-radius: 7px;
+
   background-color: aliceblue;
 }
 
