--- a/src/App.css
+++ b/src/App.css
@@ -54,20 +54,19 @@ table {
 }
 
 
-/* FONT INITS
+/* FONT INITS */
 @font-face {
-  font-family: 'Sulphur Point';
-  src: url('./assets/fonts/Sulphur_Point/SulphurPoint-Regular.ttf') format('truetype');
+  font-family: 'Cabin';
+  src: url('./assets/fonts/Cabin/Cabin-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Ubuntu Mono';
-  src: url('./assets/fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Maven Pro';
+  src: url('./assets/fonts/Maven_Pro/static/MavenPro-Black.ttf') format('truetype');
+  font-weight: 900;
   font-style: normal;
 }
-*/
 
 
 /* MAIN STYLE */
@@ -78,20 +77,40 @@ html, body, .App, div#flex-base {
   padding: 0;
 }
 
+div#flex-base {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 .App {
 	text-align: center;
 	font-family: 'Cabin', sans-serif;
-	
 }
 
 h1 {
+	margin: 36px 12px 3px 12px;
+
+	font-family: 'Maven Pro', sans-serif;
 	font-size: 3em;
-	margin: 36px 12px;
+	font-weight: 900;
+}
+
+p#about-me {
+	margin-bottom: 30px;
+
+	opacity: 0.09;
+	color: #000;
+	font-size: 0.6em;
 }
 
 p#instructions {
   margin: 12px 12px 6px 12px;
-  font-size: 0.9em;
+	
+	color: burlywood;
+	font-size: 0.9em;
 }
 
 strong {
@@ -118,9 +137,24 @@ strong {
 	background-image: linear-gradient( 109.6deg,  rgba(0,0,0,1) 11.2%, rgba(247,30,30,1) 100.3% );
 }
 
+.toastAuthor {
+	margin-top: 100px;
+	min-height: 99px;
+	padding: 14px 30px 14px 8px;
+	border-radius: 4px 20px 20px 4px;
+	box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.6), 0 2px 15px 0 rgba(0, 0, 0, 0.3);
+
+	line-height: 1.1em;
+	font-family: 'Cabin', sans-serif;
+	font-size: 0.95em;
+	color: ghostwhite;
+
+	background-image: linear-gradient( 109.6deg, rgba(3, 78, 97, 1) 11.2%, rgba(0, 189, 208, 1) 100.3% )
+}
+
 .Toastify strong {
 	font-weight: 900;
-	color: lightsteelblue;
+	color: khaki;
 }
 
 .Toastify button {
@@ -128,6 +162,15 @@ strong {
 	top: -1px;
 	margin-top: 0px;
 	margin-right: 10px;
+
+	opacity: 0.5;
+}
+
+.toastAuthor button {
+	top: 19px;
+	left: 19px;
+	margin-top: 0px;
+	margin-right: 0px;
 
 	opacity: 0.5;
 }
